[gd_scene load_steps=50 format=2]

[ext_resource path="res://Assets/Sprites/Tiles/tile_38.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Tiles/tile_29.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Tiles/tile_41.png" type="Texture" id=3]
[ext_resource path="res://Game/Templates/SalaTemplate.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sprites/Tiles/tile_06.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Tiles/tile_19.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Tiles/tile_17.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Tiles/tile_05.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Tiles/tile_07.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Tiles/tile_21.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Tiles/tile_14.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Tiles/tile_08.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Tiles/tile_13.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Tiles/tile_18.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/Tiles/tile_09.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/Tiles/tile_16.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/Tiles/tile_12.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/Tiles/tile_20.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/Tiles/tile_26.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/Tiles/tile_24.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sprites/Tiles/tile_02.png" type="Texture" id=21]
[ext_resource path="res://Assets/Sprites/Tiles/tile_01.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sprites/Tiles/tile_15.png" type="Texture" id=23]
[ext_resource path="res://Assets/Sprites/Tiles/tile_28.png" type="Texture" id=24]
[ext_resource path="res://Assets/Sprites/Tiles/tile_22.png" type="Texture" id=25]
[ext_resource path="res://Assets/Sprites/Tiles/tile_27.png" type="Texture" id=26]
[ext_resource path="res://Assets/Sprites/Tiles/tile_04.png" type="Texture" id=27]
[ext_resource path="res://Assets/Sprites/Tiles/tile_25.png" type="Texture" id=28]
[ext_resource path="res://Assets/Sprites/Tiles/tile_11.png" type="Texture" id=29]
[ext_resource path="res://Assets/Sprites/Tiles/tile_03.png" type="Texture" id=30]
[ext_resource path="res://Assets/Sprites/Tiles/tile_23.png" type="Texture" id=31]
[ext_resource path="res://Assets/Sprites/Tiles/tile_35.png" type="Texture" id=32]
[ext_resource path="res://Assets/Sprites/Tiles/tile_42.png" type="Texture" id=33]
[ext_resource path="res://Assets/Sprites/Tiles/tile_34.png" type="Texture" id=34]
[ext_resource path="res://Assets/Sprites/Tiles/tile_39.png" type="Texture" id=35]
[ext_resource path="res://Assets/Sprites/Tiles/tile_30.png" type="Texture" id=36]
[ext_resource path="res://Assets/Sprites/Tiles/tile_33.png" type="Texture" id=37]
[ext_resource path="res://Assets/Sprites/Tiles/tile_36.png" type="Texture" id=38]
[ext_resource path="res://Assets/Sprites/Tiles/tile_43.png" type="Texture" id=39]
[ext_resource path="res://Assets/Sprites/Tiles/tile_40.png" type="Texture" id=40]
[ext_resource path="res://Assets/Sprites/Tiles/tile_37.png" type="Texture" id=41]
[ext_resource path="res://Assets/Sprites/Tiles/tile_31.png" type="Texture" id=42]
[ext_resource path="res://Assets/Sprites/Tiles/tile_32.png" type="Texture" id=43]
[ext_resource path="res://Assets/Sounds/close_door_1.mp3" type="AudioStream" id=45]

[sub_resource type="TileSet" id=1]
0/name = "tile_01.png 0"
0/texture = ExtResource( 22 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tile_02.png 1"
1/texture = ExtResource( 21 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tile_03.png 2"
2/texture = ExtResource( 30 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "tile_04.png 3"
3/texture = ExtResource( 27 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "tile_05.png 4"
4/texture = ExtResource( 8 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "tile_06.png 5"
5/texture = ExtResource( 5 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "tile_07.png 6"
6/texture = ExtResource( 9 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "tile_08.png 7"
7/texture = ExtResource( 12 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "tile_09.png 8"
8/texture = ExtResource( 15 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "tile_11.png 9"
9/texture = ExtResource( 29 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 32, 32 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "tile_12.png 10"
10/texture = ExtResource( 17 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 0, 32, 32 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "tile_13.png 11"
11/texture = ExtResource( 13 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 0, 0, 32, 32 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "tile_14.png 12"
12/texture = ExtResource( 11 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 0, 0, 32, 32 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "tile_15.png 13"
13/texture = ExtResource( 23 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 0, 0, 32, 32 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "tile_16.png 14"
14/texture = ExtResource( 16 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 0, 0, 32, 32 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "tile_17.png 15"
15/texture = ExtResource( 7 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 0, 0, 32, 32 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "tile_18.png 16"
16/texture = ExtResource( 14 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 0, 0, 32, 32 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
17/name = "tile_19.png 17"
17/texture = ExtResource( 6 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 0, 0, 32, 32 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape_one_way = false
17/shape_one_way_margin = 0.0
17/shapes = [  ]
17/z_index = 0
18/name = "tile_20.png 18"
18/texture = ExtResource( 18 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 0, 0, 32, 32 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape_one_way = false
18/shape_one_way_margin = 0.0
18/shapes = [  ]
18/z_index = 0
19/name = "tile_21.png 19"
19/texture = ExtResource( 10 )
19/tex_offset = Vector2( 0, 0 )
19/modulate = Color( 1, 1, 1, 1 )
19/region = Rect2( 0, 0, 32, 32 )
19/tile_mode = 0
19/occluder_offset = Vector2( 0, 0 )
19/navigation_offset = Vector2( 0, 0 )
19/shape_offset = Vector2( 0, 0 )
19/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
19/shape_one_way = false
19/shape_one_way_margin = 0.0
19/shapes = [  ]
19/z_index = 0
20/name = "tile_22.png 20"
20/texture = ExtResource( 25 )
20/tex_offset = Vector2( 0, 0 )
20/modulate = Color( 1, 1, 1, 1 )
20/region = Rect2( 0, 0, 32, 32 )
20/tile_mode = 0
20/occluder_offset = Vector2( 0, 0 )
20/navigation_offset = Vector2( 0, 0 )
20/shape_offset = Vector2( 0, 0 )
20/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
20/shape_one_way = false
20/shape_one_way_margin = 0.0
20/shapes = [  ]
20/z_index = 0
21/name = "tile_23.png 21"
21/texture = ExtResource( 31 )
21/tex_offset = Vector2( 0, 0 )
21/modulate = Color( 1, 1, 1, 1 )
21/region = Rect2( 0, 0, 32, 32 )
21/tile_mode = 0
21/occluder_offset = Vector2( 0, 0 )
21/navigation_offset = Vector2( 0, 0 )
21/shape_offset = Vector2( 0, 0 )
21/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
21/shape_one_way = false
21/shape_one_way_margin = 0.0
21/shapes = [  ]
21/z_index = 0
22/name = "tile_24.png 22"
22/texture = ExtResource( 20 )
22/tex_offset = Vector2( 0, 0 )
22/modulate = Color( 1, 1, 1, 1 )
22/region = Rect2( 0, 0, 32, 32 )
22/tile_mode = 0
22/occluder_offset = Vector2( 0, 0 )
22/navigation_offset = Vector2( 0, 0 )
22/shape_offset = Vector2( 0, 0 )
22/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
22/shape_one_way = false
22/shape_one_way_margin = 0.0
22/shapes = [  ]
22/z_index = 0
23/name = "tile_25.png 23"
23/texture = ExtResource( 28 )
23/tex_offset = Vector2( 0, 0 )
23/modulate = Color( 1, 1, 1, 1 )
23/region = Rect2( 0, 0, 32, 32 )
23/tile_mode = 0
23/occluder_offset = Vector2( 0, 0 )
23/navigation_offset = Vector2( 0, 0 )
23/shape_offset = Vector2( 0, 0 )
23/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
23/shape_one_way = false
23/shape_one_way_margin = 0.0
23/shapes = [  ]
23/z_index = 0
24/name = "tile_26.png 24"
24/texture = ExtResource( 19 )
24/tex_offset = Vector2( 0, 0 )
24/modulate = Color( 1, 1, 1, 1 )
24/region = Rect2( 0, 0, 32, 32 )
24/tile_mode = 0
24/occluder_offset = Vector2( 0, 0 )
24/navigation_offset = Vector2( 0, 0 )
24/shape_offset = Vector2( 0, 0 )
24/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
24/shape_one_way = false
24/shape_one_way_margin = 0.0
24/shapes = [  ]
24/z_index = 0
25/name = "tile_27.png 25"
25/texture = ExtResource( 26 )
25/tex_offset = Vector2( 0, 0 )
25/modulate = Color( 1, 1, 1, 1 )
25/region = Rect2( 0, 0, 32, 32 )
25/tile_mode = 0
25/occluder_offset = Vector2( 0, 0 )
25/navigation_offset = Vector2( 0, 0 )
25/shape_offset = Vector2( 0, 0 )
25/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
25/shape_one_way = false
25/shape_one_way_margin = 0.0
25/shapes = [  ]
25/z_index = 0
26/name = "tile_27.png 26"
26/texture = ExtResource( 26 )
26/tex_offset = Vector2( 0, 0 )
26/modulate = Color( 1, 1, 1, 1 )
26/region = Rect2( 0, 0, 32, 32 )
26/tile_mode = 0
26/occluder_offset = Vector2( 0, 0 )
26/navigation_offset = Vector2( 0, 0 )
26/shape_offset = Vector2( 0, 0 )
26/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
26/shape_one_way = false
26/shape_one_way_margin = 0.0
26/shapes = [  ]
26/z_index = 0
27/name = "tile_28.png 27"
27/texture = ExtResource( 24 )
27/tex_offset = Vector2( 0, 0 )
27/modulate = Color( 1, 1, 1, 1 )
27/region = Rect2( 0, 0, 32, 32 )
27/tile_mode = 0
27/occluder_offset = Vector2( 0, 0 )
27/navigation_offset = Vector2( 0, 0 )
27/shape_offset = Vector2( 0, 0 )
27/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
27/shape_one_way = false
27/shape_one_way_margin = 0.0
27/shapes = [  ]
27/z_index = 0
28/name = "tile_29.png 28"
28/texture = ExtResource( 2 )
28/tex_offset = Vector2( 0, 0 )
28/modulate = Color( 1, 1, 1, 1 )
28/region = Rect2( 0, 0, 32, 32 )
28/tile_mode = 0
28/occluder_offset = Vector2( 0, 0 )
28/navigation_offset = Vector2( 0, 0 )
28/shape_offset = Vector2( 0, 0 )
28/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
28/shape_one_way = false
28/shape_one_way_margin = 0.0
28/shapes = [  ]
28/z_index = 0
29/name = "tile_30.png 29"
29/texture = ExtResource( 36 )
29/tex_offset = Vector2( 0, 0 )
29/modulate = Color( 1, 1, 1, 1 )
29/region = Rect2( 0, 0, 32, 32 )
29/tile_mode = 0
29/occluder_offset = Vector2( 0, 0 )
29/navigation_offset = Vector2( 0, 0 )
29/shape_offset = Vector2( 0, 0 )
29/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
29/shape_one_way = false
29/shape_one_way_margin = 0.0
29/shapes = [  ]
29/z_index = 0
30/name = "tile_31.png 30"
30/texture = ExtResource( 42 )
30/tex_offset = Vector2( 0, 0 )
30/modulate = Color( 1, 1, 1, 1 )
30/region = Rect2( 0, 0, 32, 32 )
30/tile_mode = 0
30/occluder_offset = Vector2( 0, 0 )
30/navigation_offset = Vector2( 0, 0 )
30/shape_offset = Vector2( 0, 0 )
30/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
30/shape_one_way = false
30/shape_one_way_margin = 0.0
30/shapes = [  ]
30/z_index = 0
31/name = "tile_32.png 31"
31/texture = ExtResource( 43 )
31/tex_offset = Vector2( 0, 0 )
31/modulate = Color( 1, 1, 1, 1 )
31/region = Rect2( 0, 0, 32, 32 )
31/tile_mode = 0
31/occluder_offset = Vector2( 0, 0 )
31/navigation_offset = Vector2( 0, 0 )
31/shape_offset = Vector2( 0, 0 )
31/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
31/shape_one_way = false
31/shape_one_way_margin = 0.0
31/shapes = [  ]
31/z_index = 0
32/name = "tile_33.png 32"
32/texture = ExtResource( 37 )
32/tex_offset = Vector2( 0, 0 )
32/modulate = Color( 1, 1, 1, 1 )
32/region = Rect2( 0, 0, 32, 32 )
32/tile_mode = 0
32/occluder_offset = Vector2( 0, 0 )
32/navigation_offset = Vector2( 0, 0 )
32/shape_offset = Vector2( 0, 0 )
32/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
32/shape_one_way = false
32/shape_one_way_margin = 0.0
32/shapes = [  ]
32/z_index = 0
33/name = "tile_34.png 33"
33/texture = ExtResource( 34 )
33/tex_offset = Vector2( 0, 0 )
33/modulate = Color( 1, 1, 1, 1 )
33/region = Rect2( 0, 0, 32, 32 )
33/tile_mode = 0
33/occluder_offset = Vector2( 0, 0 )
33/navigation_offset = Vector2( 0, 0 )
33/shape_offset = Vector2( 0, 0 )
33/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
33/shape_one_way = false
33/shape_one_way_margin = 0.0
33/shapes = [  ]
33/z_index = 0
34/name = "tile_35.png 34"
34/texture = ExtResource( 32 )
34/tex_offset = Vector2( 0, 0 )
34/modulate = Color( 1, 1, 1, 1 )
34/region = Rect2( 0, 0, 32, 32 )
34/tile_mode = 0
34/occluder_offset = Vector2( 0, 0 )
34/navigation_offset = Vector2( 0, 0 )
34/shape_offset = Vector2( 0, 0 )
34/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
34/shape_one_way = false
34/shape_one_way_margin = 0.0
34/shapes = [  ]
34/z_index = 0
35/name = "tile_36.png 35"
35/texture = ExtResource( 38 )
35/tex_offset = Vector2( 0, 0 )
35/modulate = Color( 1, 1, 1, 1 )
35/region = Rect2( 0, 0, 32, 32 )
35/tile_mode = 0
35/occluder_offset = Vector2( 0, 0 )
35/navigation_offset = Vector2( 0, 0 )
35/shape_offset = Vector2( 0, 0 )
35/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
35/shape_one_way = false
35/shape_one_way_margin = 0.0
35/shapes = [  ]
35/z_index = 0
36/name = "tile_37.png 36"
36/texture = ExtResource( 41 )
36/tex_offset = Vector2( 0, 0 )
36/modulate = Color( 1, 1, 1, 1 )
36/region = Rect2( 0, 0, 32, 32 )
36/tile_mode = 0
36/occluder_offset = Vector2( 0, 0 )
36/navigation_offset = Vector2( 0, 0 )
36/shape_offset = Vector2( 0, 0 )
36/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
36/shape_one_way = false
36/shape_one_way_margin = 0.0
36/shapes = [  ]
36/z_index = 0
37/name = "tile_38.png 37"
37/texture = ExtResource( 1 )
37/tex_offset = Vector2( 0, 0 )
37/modulate = Color( 1, 1, 1, 1 )
37/region = Rect2( 0, 0, 32, 32 )
37/tile_mode = 0
37/occluder_offset = Vector2( 0, 0 )
37/navigation_offset = Vector2( 0, 0 )
37/shape_offset = Vector2( 0, 0 )
37/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
37/shape_one_way = false
37/shape_one_way_margin = 0.0
37/shapes = [  ]
37/z_index = 0
38/name = "tile_39.png 38"
38/texture = ExtResource( 35 )
38/tex_offset = Vector2( 0, 0 )
38/modulate = Color( 1, 1, 1, 1 )
38/region = Rect2( 0, 0, 32, 32 )
38/tile_mode = 0
38/occluder_offset = Vector2( 0, 0 )
38/navigation_offset = Vector2( 0, 0 )
38/shape_offset = Vector2( 0, 0 )
38/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
38/shape_one_way = false
38/shape_one_way_margin = 0.0
38/shapes = [  ]
38/z_index = 0
39/name = "tile_40.png 39"
39/texture = ExtResource( 40 )
39/tex_offset = Vector2( 0, 0 )
39/modulate = Color( 1, 1, 1, 1 )
39/region = Rect2( 0, 0, 32, 32 )
39/tile_mode = 0
39/occluder_offset = Vector2( 0, 0 )
39/navigation_offset = Vector2( 0, 0 )
39/shape_offset = Vector2( 0, 0 )
39/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
39/shape_one_way = false
39/shape_one_way_margin = 0.0
39/shapes = [  ]
39/z_index = 0
40/name = "tile_41.png 40"
40/texture = ExtResource( 3 )
40/tex_offset = Vector2( 0, 0 )
40/modulate = Color( 1, 1, 1, 1 )
40/region = Rect2( 0, 0, 32, 32 )
40/tile_mode = 0
40/occluder_offset = Vector2( 0, 0 )
40/navigation_offset = Vector2( 0, 0 )
40/shape_offset = Vector2( 0, 0 )
40/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
40/shape_one_way = false
40/shape_one_way_margin = 0.0
40/shapes = [  ]
40/z_index = 0
41/name = "tile_42.png 41"
41/texture = ExtResource( 33 )
41/tex_offset = Vector2( 0, 0 )
41/modulate = Color( 1, 1, 1, 1 )
41/region = Rect2( 0, 0, 32, 32 )
41/tile_mode = 0
41/occluder_offset = Vector2( 0, 0 )
41/navigation_offset = Vector2( 0, 0 )
41/shape_offset = Vector2( 0, 0 )
41/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
41/shape_one_way = false
41/shape_one_way_margin = 0.0
41/shapes = [  ]
41/z_index = 0
42/name = "tile_43.png 42"
42/texture = ExtResource( 39 )
42/tex_offset = Vector2( 0, 0 )
42/modulate = Color( 1, 1, 1, 1 )
42/region = Rect2( 0, 0, 32, 32 )
42/tile_mode = 0
42/occluder_offset = Vector2( 0, 0 )
42/navigation_offset = Vector2( 0, 0 )
42/shape_offset = Vector2( 0, 0 )
42/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
42/shape_one_way = false
42/shape_one_way_margin = 0.0
42/shapes = [  ]
42/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.3602, 34.3389 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17.3602, 31.8954 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 47.5226, 18.0488 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 47.5226, 18.0487 )

[node name="SalaTemplate" type="Node2D"]
script = ExtResource( 4 )
door_sound = ExtResource( 45 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -393244, 0, 0, 65537, 40, 0, 65538, 32, 0, 65539, 32, 0, 65540, 32, 0, 65541, 32, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 32, 0, 65546, 32, 0, 65547, 32, 0, 65548, 32, 0, 65549, 35, 0, 131073, 41, 0, 131074, 25, 0, 131075, 25, 0, 131076, 25, 0, 131077, 25, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 25, 0, 131082, 25, 0, 131083, 25, 0, 131084, 25, 0, 131085, 42, 0, 196609, 36, 0, 196610, 14, 0, 196611, 9, 0, 196612, 2, 0, 196613, 9, 0, 196614, 2, 0, 196615, 11, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 13, 0, 196620, 5, 0, 196621, 39, 0, 262145, 2, 0, 262146, 2, 0, 262147, 9, 0, 262148, 2, 0, 262149, 9, 0, 262150, 2, 0, 262151, 7, 0, 262152, 14, 0, 262153, 5, 0, 262154, 7, 0, 262155, 9, 0, 262156, 5, 0, 262157, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 15, 0, 327686, 2, 0, 327687, 7, 0, 327688, 7, 0, 327689, 13, 0, 327690, 2, 0, 327691, 17, 0, 327692, 5, 0, 327693, 2, 0, 393217, 28, 0, 393218, 2, 0, 393219, 2, 0, 393220, 13, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 11, 0, 393225, 4, 0, 393226, 15, 0, 393227, 12, 0, 393228, 1, 0, 393229, 29, 0, 458753, 28, 0, 458754, 14, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 4, 0, 458762, 11, 0, 458763, 1, 0, 458764, 1, 0, 458765, 29, 0, 524289, 37, 0, 524290, 20, 0, 524291, 20, 0, 524292, 20, 0, 524293, 20, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 20, 0, 524298, 20, 0, 524299, 20, 0, 524300, 20, 0, 524301, 34, 0 )

[node name="PortaEsquerda" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortaEsquerda"]
position = Vector2( 50, 160 )
shape = SubResource( 2 )

[node name="PortaDireita" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortaDireita"]
position = Vector2( 430, 160 )
shape = SubResource( 3 )

[node name="PortaSuperior" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortaSuperior"]
position = Vector2( 240, 50 )
shape = SubResource( 4 )

[node name="PortaInferior" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortaInferior"]
position = Vector2( 240, 270 )
shape = SubResource( 5 )

[node name="Tween" type="Tween" parent="."]

[connection signal="input_event" from="PortaEsquerda" to="." method="_on_PortaEsquerda_input_event"]
[connection signal="input_event" from="PortaDireita" to="." method="_on_PortaDireita_input_event"]
[connection signal="input_event" from="PortaSuperior" to="." method="_on_PortaSuperior_input_event"]
[connection signal="input_event" from="PortaInferior" to="." method="_on_PortaInferior_input_event"]
